# image_processing-jpeg_conversion

./: CMakeLists.txt  INSTALL  README  manifest.xml
bindings/ruby/: CMakeLists.txt  Rakefile  jpeg_conversion.cpp  jpeg_conversion.rb
bindings/ruby/lib/: jpeg_conversion.rb
src/: CMakeLists.txt  Main.cpp  jpeg_conversion.cpp  jpeg_conversion.hpp  jpeg_conversion.pc.in  main.cpp
test/: CMakeLists.txt  Main.cpp
